version 0.0.4 - date
	admin
	. adherent (MVC) : filter by publish state ok
	. adherent (MVC) : filter by country is ok

version 0.0.3 - date 2015.07.12
	admin
	. adh (MC)		: import data from an .sql file (previously exported from VPN v2 site).
					: /!\ NO CHECK IS MADE ON FILE VALIDITY !!
	site
	. confirm (V)	: send mail to adherent

version 0.0.2 - date 2015.05.09
	admin
	. adh (MVC) : added feature to export com_adh tables to sql file

version 0.0.1 - date 2015.05.08
	admin:
	. adherent : edit page is Joomla 3x ready !