@@ -212,6 +212,7 @@ COM_ADH_1ANOMALIE_SELECT_OPTION4="adhérents sans cotisation"
 COM_ADH_2ANOMALIE_SELECT_OPTION1="cotisations orphelines"
 COM_ADH_2ANOMALIE_SELECT_OPTION2="cotisations en double"
 COM_ADH_SHOW_NOT_IMPORTED="Afficher uniquement les items non importés"
+COM_ADH_SELECT_VILLE="- Sélectionner une ville -"
 COM_ADH_SELECT_PAYS="- Sélectionner un pays -"
 
 ; les textes
