@@ -1,0 +1,67 @@
+<?php
+
+/** 
+ *  @component	com_adh
+ * 
+ *  @copyright	Copyright (C) 2012-2015 DEGENNES Charles-Antoine <cadegenn@gmail.com>
+ *  @license	Affero GNU General Public License Version 3; see LICENSE.txt
+ * 
+ */
+ 
+defined('JPATH_BASE') or die;
+ 
+jimport('joomla.html.html');
+jimport('joomla.form.formfield');
+jimport('joomla.form.helper');
+JFormHelper::loadFieldClass('list');
+ 
+/**
+ * Custom Field class for the Joomla Framework.
+ *
+ * @package             Joomla.Administrator
+ * @subpackage          com_adh
+ * @since               0.0.11
+ */
+class JFormFieldVille extends JFormFieldList
+{
+	/**
+	 * The form field type.
+	 *
+	 * @var         string
+	 * @since       0.0.11
+	 */
+	protected $type = 'ville';
+
+	/**
+	 * Method to get the field options.
+	 *
+	 * @return      array   The field option objects.
+	 * @since       1.6
+	 */	
+	public function getOptions()
+	{
+		// Initialize variables.
+		$options = array();
+
+		$db     = JFactory::getDbo();
+		$query  = $db->getQuery(true);
+
+		//$query->select('id AS value, label AS text'); // => important !! AS value pour l'id et AS text pour le texte de l'option
+		$query->select('ville as value, CONCAT(UCASE(LEFT(ville, 1)), LOWER(SUBSTRING(ville, 2))) as text');
+		$query->from('#__adh_adherents');
+		$query->group('text');
+
+		// Get the options.
+		$db->setQuery($query);
+
+		$options = $db->loadObjectList();
+
+		// Check for a database error.
+		if ($db->getErrorNum()) {
+			JError::raiseWarning(500, $db->getErrorMsg());
+		}
+
+		
+		return array_merge(parent::getOptions(), $options);
+	}
+}
